# myairflow

./: .gitignore  .pdm-python  README.md  pyproject.toml
dags/: virtual.py  cathup.py  hello.py  movies.py  movies_after.py  movies_spark.py  myetl.py  seoul.py  virtual.py  wiki_local.py  wiki_meta.py  wiki_proc.py
pyspark/: movie_meta.py
src/myairflow/: notify.py  parquetmanager.py
tests/: test_notify.py
