[project]
name = "myairflow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vhzkclq0705", email = "vhzkclq0705@naver.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
